--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
-<html>
-    <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
+</head>
+<body>
+    
+    <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+        Amount 
+        <input type="number" id="principal" >  <br/>
 
-        <button onclick="compute()">Compute</button>
-    </body>
+        Rate 
+        <input type="range" onclick="updateRate()" id="rate" min="1" max="20" step="0.25" value="10.25">  <br/>
+        <span id="rate_val">
+            10.25%
+        </span>
+
+        No. of Years 
+        <select id="years">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+        </select>
+
+        Interest : 
+        <button onclick="computeInterest()">Compute Interest</button>
+        <span id="result">
+
+        </span>
+ 
+
+    </div>
+
+
+    <footer>
+        &#169; This Calculator belongs to me
+    </footer>
+
+</body>
 </html>
+
+
+
