--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <h1>Simple Interest Calculator</h1>
 
         Amount :
-        <input type="number" id="principal" >  <br/>
+        <input type="number" id="principal" required="Enter a Positive Integer" >  <br/>
 
         Rate :
-        <input type="text" id="rate">  <br/>
+        <input type="range" onclick="updateRate()" id="rate" min="1" max="20" step="0.25" value="10.25">  
+        <span id="rate_val">10.25 %</span> <br/>
  
         No. of Years :
         <input type="number" id="noOfYears"> <br/>
